checker/tests/nullness-javac-errors/BadCast1.java
public class BadCast1 {
  public void m() {
    // :: error: illegal start of type :: error: not a statement
    (@NonNull) "";
  }
}
